[gd_scene load_steps=2 format=3 uid="uid://bhjckv7pd2eri"]

[ext_resource type="Script" path="res://addons/diisis/editor/src/fact_item.gd" id="1_kk40s"]

[node name="Fact" type="VBoxContainer"]
offset_right = 289.0
offset_bottom = 104.0
size_flags_horizontal = 0
script = ExtResource("1_kk40s")

[node name="FactItem" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="FactItem"]
layout_mode = 2

[node name="FactValue" type="CheckBox" parent="FactItem/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 8

[node name="FactName" type="LineEdit" parent="FactItem/HBoxContainer"]
custom_minimum_size = Vector2(144, 0)
layout_mode = 2
size_flags_horizontal = 2
placeholder_text = "fact name"
expand_to_text_length = true

[node name="DeleteButton" type="Button" parent="FactItem"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
text = "x"

[node name="RegisterContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="RegisterLabel" type="RichTextLabel" parent="RegisterContainer"]
custom_minimum_size = Vector2(217.87, 0)
layout_mode = 2
text = "Fact \"\" isn't registered in global scope. Would you like to register it?"
fit_content = true

[node name="RegisterButton" type="Button" parent="RegisterContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "register"

[connection signal="pressed" from="FactItem/HBoxContainer/FactValue" to="." method="_on_fact_value_pressed"]
[connection signal="toggled" from="FactItem/HBoxContainer/FactValue" to="." method="_on_fact_value_toggled"]
[connection signal="text_changed" from="FactItem/HBoxContainer/FactName" to="." method="_on_fact_name_text_changed"]
[connection signal="pressed" from="FactItem/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="RegisterContainer/RegisterButton" to="." method="_on_register_button_pressed"]
